--- a/blog-yazi-2.html
+++ b/blog-yazi-2.html
@@ -73,7 +73,7 @@
                     <a href="blog.html" class="text-[var(--primary-600)] font-semibold hover:underline">&larr; Blog'a Geri Dön</a>
                     <h1 class="mt-4 text-4xl md:text-5xl font-black text-gray-900">Doğru Boya Nasıl Seçilir? Mat mı, Saten mi?</h1>
                     <p class="mt-4 text-lg text-gray-500">Yayınlanma Tarihi: 25 Temmuz 2025</p>
-                    <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBlowHjSZOOmamVQaj4TDVCZczKe7H-uCx1rfGK-ZvJHVIDYuVVeP4byI66btNyPT2_F0JTjqAs1xs6Nv_KNYD7LMWch0hFIlXd7kSoaNGmQZoizTT2n9R7lMTRNGgcuyJoIxEUzIwqsZuSCeU7TWgOeOZOy0i6cs8EeEemHCuXE18JsjiMDGeWtmOusZPJyqziEGPeMlh_mQMcnRuXlj_yJFEcev5UCtYtHnYEGdDXMk0RARO9gS-93sQwqX-y3PwA9sKT0c6SCgY");' role="img" aria-label="Mat ve saten boya arasındaki parlaklık farkını gösteren duvar"></div>
+                    <div class="mt-8 h-96 w-full bg-cover bg-center rounded-lg shadow-lg" style='background-image: url("img/dogruboya.jpg");' role="img" aria-label="Mat ve saten boya arasındaki parlaklık farkını gösteren duvar"></div>
                     <div class="mt-8 prose prose-lg max-w-none text-gray-700">
                         <p>Hayalinizdeki rengi buldunuz, peki ya parlaklığı? Duvarlarınız için boya seçerken parlaklık seviyesi en az renk kadar önemlidir. Doğru parlaklık seçimi, hem odanın estetiğini ve atmosferini hem de boyanın dayanıklılığını doğrudan etkiler. Piyasada en yaygın olarak karşımıza çıkan iki seçenek olan <strong>mat ve saten boya</strong> arasındaki temel farkları ve hangisini, ne zaman tercih etmeniz gerektiğini bu yazıda tüm detaylarıyla açıklıyoruz.</p>
                         
@@ -176,8 +176,7 @@
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
-                                    55</a></li>
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
