--- a/blog.html
+++ b/blog.html
@@ -109,8 +109,8 @@
                             </a>
                             <div class="p-6">
                                 <p class="text-sm text-gray-500">31 Temmuz 2025</p>
-                                <h3 class="mt-2 text-xl font-bold text-gray-900"><a href="blog-yazi-3.html" class="hover:text-[var(--primary-600)] transition-colors">Doğru Boya Rengi Nasıl Seçilir?</a></h3>
-                                <p class="mt-3 text-gray-600">Mekanınız için mükemmel rengi seçmek, ışık, oda boyutu ve mobilya gibi birçok faktöre bağlıdır. Bu rehberle en doğru kararı verin.</p>
+                                <h3 class="mt-2 text-xl font-bold text-gray-900"><a href="blog-yazi-3.html" class="hover:text-[var(--primary-600)] transition-colors">Boya Öncesi Yüzey Hazırlığı</a></h3>
+                                <p class="mt-3 text-gray-600">Mükemmel bir boya işinin sırrı doğru yüzey hazırlığından geçer. Duvar temizliği, macun, zımpara ve astar uygulaması hakkında profesyonel ipuçları.</p>
                                 <a href="blog-yazi-3.html" class="mt-4 inline-block text-[var(--primary-600)] font-semibold group-hover:underline">Devamını Oku &rarr;</a>
                             </div>
                         </article>
@@ -163,8 +163,7 @@
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
-                                    55</a></li>
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
