--- a/galeri.html
+++ b/galeri.html
@@ -98,11 +98,11 @@
                          <a href="https://lh3.googleusercontent.com/aida-public/AB6AXuC8S17uMvD7GJ5ppggmbtW_1h7AXQh-wokMlTSJSLcqvXLwOWiRCNoGvpJ-rlCwajuixafVwh7VXfjT2J11U3beSiJYstDO3xAikmqH83d9-DjF7n5gCZB0lTLXZbQpdZdcbDbwRmQrl-i3xNh0508vBiJrrvm_7nRI6nzPvxb4IRKjQHDaiq6RtKIcwuLq6wV5X5OzyuM9UIbOARH6hWTqIQ4hHNrCfVJphPkZjSB5zcHYxMOIYwQ__RbfesH_-CKKaLN4VwCoBFA" class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
                             <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC8S17uMvD7GJ5ppggmbtW_1h7AXQh-wokMlTSJSLcqvXLwOWiRCNoGvpJ-rlCwajuixafVwh7VXfjT2J11U3beSiJYstDO3xAikmqH83d9-DjF7n5gCZB0lTLXZbQpdZdcbDbwRmQrl-i3xNh0508vBiJrrvm_7nRI6nzPvxb4IRKjQHDaiq6RtKIcwuLq6wV5X5OzyuM9UIbOARH6hWTqIQ4hHNrCfVJphPkZjSB5zcHYxMOIYwQ__RbfesH_-CKKaLN4VwCoBFA" alt="Apartman Dış Cephe Yenileme">
                         </a>
-                        <a href="https://lh3.googleusercontent.com/aida-public/AB6AXuCpyYaCG2xIfl3GvHQMBa968oMFE2VG4bIegxDOjeTKF5SpH0CnESPPFrF9cL5Sso9mgOvIvc3l2keuRZDNx7HCo9oVHPOWhhdWLHUyQNLOe_VAL7SYxDhNuRt-FDJ5t1hUZHuElPd43mdT8dX_hfufFuNn6Iq8QmgdA805MhLducCi9itzi4HyaJKVD6ckwU_blUs8eLOLUtQT-4ya7IKtqB72zVE2gR48GOsjDHD3cTGLB5qgSoPeMXo3aU-cX8Vfk3WYD3IMAuk" class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
-                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCpyYaCG2xIfl3GvHQMBa968oMFE2VG4bIegxDOjeTKF5SpH0CnESPPFrF9cL5Sso9mgOvIvc3l2keuRZDNx7HCo9oVHPOWhhdWLHUyQNLOe_VAL7SYxDhNuRt-FDJ5t1hUZHuElPd43mdT8dX_hfufFuNn6Iq8QmgdA805MhLducCi9itzi4HyaJKVD6ckwU_blUs8eLOLUtQT-4ya7IKtqB72zVE2gR48GOsjDHD3cTGLB5qgSoPeMXo3aU-cX8Vfk3WYD3IMAuk" alt="Yatak Odası Boyama">
+                        <a href="img/dogruboya.jpg" class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="img/dogruboya.jpg" alt="Doğru boya seçimi için renk kartelaları">
                         </a>
-                        <a href="https://lh3.googleusercontent.com/aida-public/AB6AXuC0HzCs81B3EvBwL41ZoYGP5dv3MFhBM0BFgeIxBpLnsGtkeZACfM3_32XflMwi_Cb_IQxpRBapmotDhRigR0vEJYBmmoXIEeXOEA90XkhIFSu00x10Mh3VILp3HlfmFdkw7i4UQdijIKtuReHGwm8nPStUAa-EHDAOriXT19AknIZhaGaFjjFbG2gPIy6LVUZzwN1OWVhEN9VaK2ayCCj1JsXMiLqfewFHRif6YU-cNXhEggW92B5C8f1UzCQPCx521YBQmU3YA1s" class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
-                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="https://lh3.googleusercontent.com/aida-public/AB6AXuC0HzCs81B3EvBwL41ZoYGP5dv3MFhBM0BFgeIxBpLnsGtkeZACfM3_32XflMwi_Cb_IQxpRBapmotDhRigR0vEJYBmmoXIEeXOEA90XkhIFSu00x10Mh3VILp3HlfmFdkw7i4UQdijIKtuReHGwm8nPStUAa-EHDAOriXT19AknIZhaGaFjjFbG2gPIy6LVUZzwN1OWVhEN9VaK2ayCCj1JsXMiLqfewFHRif6YU-cNXhEggW92B5C8f1UzCQPCx521YBQmU3YA1s" alt="Mutfak Duvar Boyama">
+                        <a href="img/iccepheboyama.jpeg" class="group relative overflow-hidden rounded-lg shadow-lg cursor-pointer">
+                            <img class="h-72 w-full object-cover transition-transform duration-500 group-hover:scale-110" src="img/iccepheboyama.jpeg" alt="Profesyonel iç cephe boyama çalışması">
                         </a>
                     </div>
                 </div>
@@ -152,8 +152,7 @@
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
-                                    55</a></li>
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
