--- a/hizmetler.html
+++ b/hizmetler.html
@@ -143,7 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               </div>
               <div class="relative mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center text-white">
                 <div class="min-h-[45vh] md:min-h-[55vh] flex items-center justify-center">
-                  <div class="max-w-3xl reveal">
+                  <div class="max-w-3xl reveal pt-16">
                     <h1 class="text-4xl md:text-6xl font-black tracking-tight">Hizmetlerimiz</h1>
                     <p class="mt-4 text-lg md:text-xl font-light text-slate-200">Yaşam alanlarınızı uzmanlıkla dönüştürüyoruz.</p>
                     <div class="mt-8 flex items-center justify-center gap-4">
@@ -232,8 +232,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
-                                    55</a></li>
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
