--- a/iletisim.html
+++ b/iletisim.html
@@ -35,9 +35,12 @@
 </head>
 <body class="bg-white">
     <div class="relative flex size-full min-h-screen flex-col overflow-x-hidden">
-        <header id="main-header" class="relative bg-white top-0 left-0 right-0 z-30 px-4 py-2 sm:px-6 lg:px-8 transition-all duration-300">
+        <header id="main-header"
+            class="relative bg-white top-0 left-0 right-0 z-30 px-4 py-2 sm:px-6 lg:px-8 transition-all duration-300">
             <nav class="flex items-center justify-between max-w-7xl mx-auto">
-                <a href="index.html"><img src="img/Logo.png" alt="İstanbul Boyacınız Logosu" class="h-24 md:h-28"></a>
+                <a href="index.html">
+                    <img src="img/Logo.png" alt="İstanbul Boyacınız Logosu" class="h-24 md:h-28">
+                </a>
                 <div class="hidden md:flex items-center gap-8 text-gray-700">
                     <a class="hover:text-[var(--primary-600)] transition-colors" href="index.html">Anasayfa</a>
                     <div class="relative group">
@@ -86,7 +89,7 @@
               </div>
               <div class="relative mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center text-white">
                 <div class="min-h-[45vh] md:min-h-[55vh] flex items-center justify-center">
-                  <div class="max-w-3xl reveal">
+                  <div class="max-w-3xl reveal pt-16">
                     <h1 class="text-4xl md:text-6xl font-black">Bize Ulaşın</h1>
                     <p class="mt-4 text-lg md:text-xl font-light text-slate-200">Sorularınız, teklif talepleriniz veya ücretsiz keşif için buradayız.</p>
                     <div class="mt-8 flex items-center justify-center gap-4">
@@ -201,8 +204,7 @@
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
-                                    55</a></li>
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
