--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -85,7 +85,7 @@
         </div>
 
         <main id="main-content" class="flex-grow">
-            <section class="bg-cover bg-center py-20 md:py-32" style='background-image: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.8) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCpyYaCG2xIfl3GvHQMBa968oMFE2VG4bIegxDOjeTKF5SpH0CnESPPFrF9cL5Sso9mgOvIvc3l2keuRZDNx7HCo9oVHPOWhhdWLHUyQNLOe_VAL7SYxDhNuRt-FDJ5t1hUZHuElPd43mdT8dX_hfufFuNn6Iq8QmgdA805MhLducCi9itzi4HyaJKVD6ckwU_blUs8eLOLUtQT-4ya7IKtqB72zVE2gR48GOsjDHD3cTGLB5qgSoPeMXo3aU-cX8Vfk3WYD3IMAuk");'>
+            <section class="bg-cover bg-center py-20 md:py-32" style='background-image: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.8) 100%), url("img/hakkimizda-2.jpg");'>
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
                     <h1 class="text-4xl md:text-6xl font-black">Hakkımızda</h1>
                     <p class="mt-4 text-lg md:text-xl font-light">Kalite, Güven ve Sanatın Buluştuğu Adres</p>
@@ -95,8 +95,9 @@
             <section class="py-16 sm:py-24 bg-white">
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
-                        <div class="h-96 rounded-lg overflow-hidden shadow-xl">
-                            <div class="h-full w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC0HzCs81B3EvBwL41ZoYGP5dv3MFhBM0BFgeIxBpLnsGtkeZACfM3_32XflMwi_Cb_IQxpRBapmotDhRigR0vEJYBmmoXIEeXOEA90XkhIFSu00x10Mh3VILp3HlfmFdkw7i4UQdijIKtuReHGwm8nPStUAa-EHDAOriXT19AknIZhaGaFjjFbG2gPIy6LVUZzwN1OWVhEN9VaK2ayCCj1JsXMiLqfewFHRif6YU-cNXhEggW92B5C8f1UzCQPCx521YBQmU3YA1s");'></div>
+                        <div class="grid grid-cols-1 gap-6">
+                            <img src="img/hakkımızda-1.jpg" alt="Ekibimiz titizlikle çalışırken" class="rounded-lg shadow-xl object-cover w-full h-64 md:h-80">
+                            <img src="img/hakkımızda-2.jpg" alt="Kullandığımız kaliteli boya ve malzemeler" class="rounded-lg shadow-xl object-cover w-full h-64 md:h-80">
                         </div>
                         <div>
                             <h2 class="text-3xl font-extrabold text-[var(--secondary-900)]">Biz Kimiz?</h2>
@@ -171,8 +172,7 @@
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
-                                    55</a></li>
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
