--- a/ic-cephe-boyama.html
+++ b/ic-cephe-boyama.html
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="h-96 lg:h-auto rounded-lg overflow-hidden shadow-xl">
-                            <div class="h-full w-full bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCWbLxa4eUWJscCEUewVmDbTRmBw9lnUWJTxgvyvKMUjRR3HEnYbNVzpgbqEhlyrS_wgz_09qpoH8fQdku9obfEAjK7fMpW7JLgScprEK1B-hc9mZRyBQefFljQF25JPTM9NFJvC6VAzdJKPW53SczjsWyXeywxA792dB-QtyZFGePMgeFf_wSP-burswp491pA47Jn-ct57nKmwXPyXVdN2Wfzar2k-bfgV1pa0IEqtUOX0L_zHG8l4D5n53wAYmi4lV9AYTXkx8o");'></div>
+                            <img src="img/iccepheboyama.jpeg" alt="Profesyonel iç cephe boyama uygulaması" class="h-full w-full object-cover">
                         </div>
                     </div>
                 </div>
@@ -160,8 +160,7 @@
                                     class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
-                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 555 555 55
-                                    55</a></li>
+                                    href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">email</span><a
                                     href="mailto:info@istanbulboyaciniz.com"
                                     class="hover:text-white transition-colors">info@istanbulboyaciniz.com</a></li>
