--- a/blog-yazi-1.html
+++ b/blog-yazi-1.html
@@ -140,7 +140,7 @@
                         <h3 class="text-sm font-semibold tracking-wider uppercase">Bize Ulaşın</h3>
                         <ul class="mt-4 space-y-3 text-sm text-[var(--secondary-300)]">
                             <li class="flex items-start"><span
-                                    class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
+                                    class="material-icons text-lg mr-2 mt-1">location_on</span><span>Beşiktaş/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
                                     href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
