--- a/iletisim.html
+++ b/iletisim.html
@@ -109,7 +109,7 @@
                         <div class="mt-8 space-y-8 text-lg text-gray-600">
                           <p class="flex items-start">
                             <span class="material-icons text-[var(--primary-600)] text-3xl mr-4">location_on</span>
-                            <span><strong class="block text-gray-800">Adres:</strong> Örnek Mah. Boya Sok. No:123, Kat:4 D:5, Kadıköy/İstanbul</span>
+                            <span><strong class="block text-gray-800">Adres:</strong> Sinanpaşa Mah. Şair Veysi Sok. No:10, Beşiktaş/İstanbul</span>
                           </p>
                           <p class="flex items-start">
                             <span class="material-icons text-[var(--primary-600)] text-3xl mr-4">phone</span>
@@ -125,7 +125,7 @@
                           </p>
                         </div>
                         <div class="mt-8 h-64 sm:h-80 w-full bg-gray-200 rounded-lg overflow-hidden">
-                          <iframe src="https://maps.google.com/maps?q=Kadıköy,%20İstanbul&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                          <iframe src="https://maps.google.com/maps?q=Beşiktaş,%20İstanbul&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                       </div>
 
@@ -201,7 +201,7 @@
                         <h3 class="text-sm font-semibold tracking-wider uppercase">Bize Ulaşın</h3>
                         <ul class="mt-4 space-y-3 text-sm text-[var(--secondary-300)]">
                             <li class="flex items-start"><span
-                                    class="material-icons text-lg mr-2 mt-1">location_on</span><span>Kadıköy/İstanbul</span>
+                                    class="material-icons text-lg mr-2 mt-1">location_on</span><span>Beşiktaş/İstanbul</span>
                             </li>
                             <li class="flex items-start"><span class="material-icons text-lg mr-2 mt-1">phone</span><a
                                     href="tel:+905387410140" class="hover:text-white transition-colors">+90 538 741 01 40</a></li>
