--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Hakkımızda - İstanbul Boyacınız | Profesyonel Boya Badana</title>
-    <meta name="description" content="İstanbul Boyacınız olarak yılların tecrübesiyle, müşteri memnuniyetini ön planda tutarak profesyonel boya badana hizmetleri sunuyoruz. Hikayemizi ve değerlerimizi keşfedin.">
+    <title>Hakkımızda | Beşiktaş'ın Güvenilir Boya Badana Ustası | İstanbul Boyacınız</title>
+    <meta name="description" content="İstanbul Boyacınız'ın hikayesini keşfedin. Beşiktaş ve tüm İstanbul'da yılların tecrübesi, uzman ekibi ve kaliteye olan bağlılığıyla hizmet veren güvenilir boya badana firmanızı daha yakından tanıyın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries,typography"></script>
     <style type="text/tailwindcss">
