--- a/hizmetler.html
+++ b/hizmetler.html
@@ -10,8 +10,8 @@
         href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%3B400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%3B400%3B500%3B700%3B900"
         onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Hizmetlerimiz - İstanbul Boyacınız</title>
-    <meta name="description" content="İstanbul Boyacınız olarak sunduğumuz profesyonel iç cephe, dış cephe ve ticari boya badana hizmetlerinin detayları.">
+    <title>Profesyonel Boya Badana Hizmetleri | İç Cephe, Dış Cephe, Ticari Boyama | İstanbul Boyacınız</title>
+    <meta name="description" content="İstanbul Boyacınız'ın profesyonel boya badana hizmetlerini keşfedin. Beşiktaş ve çevresinde iç cephe, dış cephe ve ticari alan boyama çözümlerimizle hizmetinizdeyiz. Kaliteli malzeme ve uzman işçilik için bize ulaşın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries,typography"></script>
     <style type="text/tailwindcss">
