--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
         onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>İstanbul Boyacınız - Profesyonel Boya Badana Hizmetleri</title>
+    <title>Beşiktaş Boya Badana Ustası | Profesyonel Ev & Ofis Boyama | İstanbul Boyacınız</title>
     <meta name="description"
-        content="İstanbul Boyacınız, ev ve iş yerleriniz için profesyonel, temiz ve güvenilir boya badana hizmetleri sunar. Kaliteli işçilik ve zamanında teslimat.">
+        content="Beşiktaş'ta profesyonel boya badana ustası mı arıyorsunuz? İstanbul Boyacınız olarak garantili işçilik, ücretsiz keşif ve zamanında teslimat ile hizmetinizdeyiz. Ev, ofis ve tüm mekanlarınız için hemen teklif alın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries,typography"></script>
     <style type="text/tailwindcss">
@@ -92,49 +92,7 @@
           background: linear-gradient(180deg, rgba(15,23,42,0.45) 0%, rgba(15,23,42,0.65) 100%);
         }
     </style>
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "PaintingService",
-      "name": "İstanbul Boyacınız",
-      "image": "https://www.istanbulboyaciniz.com/img/Logo.png",
-      "@id": "",
-      "url": "https://www.istanbulboyaciniz.com",
-      "telephone": "+90-555-555-55-55",
-      "priceRange": "₺₺",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Örnek Mah. Atatürk Cad. No:123",
-        "addressLocality": "Beşiktaş",
-        "addressRegion": "İstanbul",
-        "postalCode": "34710",
-        "addressCountry": "TR"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 40.9832,
-        "longitude": 29.0222
-      },
-      "openingHoursSpecification": {
-        "@type": "OpeningHoursSpecification",
-        "dayOfWeek": [
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday",
-          "Sunday"
-        ],
-        "opens": "08:00",
-        "closes": "22:00"
-      },
-      "sameAs": [
-        "https://www.facebook.com/istanbulboyaciniz",
-        "https://www.instagram.com/istanbulboyaciniz"
-      ] 
-    }
-    </script>
+    
 </head>
 
 <body class="bg-white">
