--- a/ticari-boyama.html
+++ b/ticari-boyama.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Ticari Alan Boyama - İstanbul Boyacınız</title>
-    <meta name="description" content="Ofis, mağaza, restoran gibi ticari mekanlarınız için iş akışınızı aksatmayacak esnek, hızlı ve profesyonel boya çözümleri sunuyoruz.">
+    <title>Ticari Alan Boyama | Beşiktaş Ofis & Mağaza Boya Ustası | İstanbul Boyacınız</title>
+    <meta name="description" content="Beşiktaş'taki ofis, mağaza ve işletmeniz için profesyonel ticari boyama hizmetleri. İşinizi aksatmadan, esnek saatlerde, uzman boya ustası ekibimizle mekanınızı yeniliyoruz. Kurumsal çözümler için teklif alın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
