--- a/blog-yazi-1.html
+++ b/blog-yazi-1.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>2025 Yılının Gözde Duvar Renkleri - İstanbul Boyacınız Blog</title>
-    <meta name="description" content="Bu yılın trend renkleriyle evinize modern bir dokunuş katın. Doğadan ilham alan tonlar ve cesur renkler ön planda.">
+    <title>2025 Duvar Renkleri: Trend Boya Renkleri ve Fikirleri | İstanbul Boyacınız</title>
+    <meta name="description" content="2025'in trend duvar renklerini keşfedin! Beşiktaş boya ustasından toprak tonları, adaçayı yeşili ve derin maviler için dekorasyon fikirleri ve uygulama ipuçları.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
