--- a/blog-yazi-2.html
+++ b/blog-yazi-2.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Doğru Boya Nasıl Seçilir? Mat mı, Saten mi? - İstanbul Boyacınız Blog</title>
-    <meta name="description" content="Duvarlarınız için boya seçerken parlaklık seviyesi en az renk kadar önemlidir. Mat ve saten boya arasındaki farkları ve hangisini nerede kullanmanız gerektiğini öğrenin.">
+    <title>Mat Boya mı Saten Boya mı? | Farkları ve Kullanım Alanları | İstanbul Boyacınız</title>
+    <meta name="description" content="Mat ve saten boya arasındaki farklar nelerdir? Hangi boya daha kullanışlı? Profesyonel boya ustasından duvarlarınız için doğru boyayı seçme rehberi. Avantajları, dezavantajları ve kullanım alanları.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
