--- a/blog-yazi-3.html
+++ b/blog-yazi-3.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Boya Öncesi Yüzey Hazırlığının Püf Noktaları | İstanbul Boyacınız</title>
-    <meta name="description" content="Mükemmel bir boya işinin sırrı doğru yüzey hazırlığından geçer. Duvar temizliği, macun, zımpara ve astar uygulaması hakkında profesyonel ipuçları.">
+    <title>Boya Öncesi Hazırlık Nasıl Yapılır? | Püf Noktaları | İstanbul Boyacınız</title>
+    <meta name="description" content="Kalıcı ve pürüzsüz bir boya için boya öncesi hazırlık adımları. Duvar temizliği, macun, zımpara ve astar nasıl uygulanır? Profesyonel boya ustasından püf noktaları.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries,typography"></script>
     <style type="text/tailwindcss">
