--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Blog - İstanbul Boyacınız</title>
-    <meta name="description" content="Boya badana ipuçları, renk trendleri ve ev dekorasyonu hakkında faydalı yazılar. İstanbul Boyacınız blog sayfası.">
+    <title>Boya Badana Blogu | Ev Dekorasyon Fikirleri ve İpuçları | İstanbul Boyacınız</title>
+    <meta name="description" content="İstanbul Boyacınız blogunda profesyonel boya badana ipuçları, en son renk trendleri ve ev dekorasyon fikirleri bulabilirsiniz. Beşiktaş'taki boya ustasından tavsiyeler.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
