--- a/dis-cephe-boyama.html
+++ b/dis-cephe-boyama.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>Dış Cephe Boyama - İstanbul Boyacınız</title>
-    <meta name="description" content="Binanızın estetik görünümünü ve değerini artıran dış cephe boyama hizmetimizle, yapılarınızı zorlu hava koşullarına karşı koruma altına alıyoruz.">
+    <title>Dış Cephe Boyama & Mantolama | Beşiktaş Bina Boya Ustası | İstanbul Boyacınız</title>
+    <meta name="description" content="Beşiktaş'ta profesyonel dış cephe boyama ve mantolama hizmetleri. Uzman bina boya ustası ekibimizle binanızın değerini artırın, hava koşullarına karşı koruyun. Ücretsiz keşif için bize ulaşın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
