--- a/ic-cephe-boyama.html
+++ b/ic-cephe-boyama.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>İç Cephe Boyama - İstanbul Boyacınız</title>
-    <meta name="description" content="Evinizin veya ofisinizin atmosferini değiştirmek için profesyonel iç cephe boyama hizmeti. Kaliteli malzemeler ve titiz işçilikle mekanlarınızı yeniliyoruz.">
+    <title>Profesyonel İç Cephe Boyama | Beşiktaş Ev & Ofis Boya Ustası | İstanbul Boyacınız</title>
+    <meta name="description" content="Beşiktaş'ta profesyonel iç cephe boyama hizmeti. Deneyimli boya ustalarımızla evinizi, ofisinizi titiz işçilik ve kaliteli malzemelerle yeniliyoruz. Ücretsiz keşif ve danışmanlık için hemen arayın.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
