--- a/iletisim.html
+++ b/iletisim.html
@@ -6,8 +6,8 @@
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect" />
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Lexend%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <title>İletişim - İstanbul Boyacınız</title>
-    <meta name="description" content="Bizimle iletişime geçin. İstanbul Boyacınız'a telefon, e-posta veya iletişim formu üzerinden ulaşarak ücretsiz keşif ve fiyat teklifi alın.">
+    <title>İletişim | Ücretsiz Keşif ve Fiyat Teklifi | Beşiktaş Boya Ustası</title>
+    <meta name="description" content="Beşiktaş'taki boya badana projeniz için İstanbul Boyacınız ile iletişime geçin. Telefon, WhatsApp veya e-posta ile bize ulaşarak ücretsiz keşif ve fiyat teklifi isteyin. Adres ve harita bilgileri burada.">
     <link href="img/Logo.png" rel="icon" type="image/png">
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries,typography"></script>
     <style type="text/tailwindcss">
